Actualiza el nombre de la app a TicTacToe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tarea1</string>
+    <string name="app_name">TicTacToe</string>
     <!-- Textos para la Pantalla de Partida -->
     <string name="choose_opponent">Elige a tu Oponente</string>
     <string name="vs">VS</string>
